{
    "name": "Inputs",
    "maps": [
        {
            "name": "Touch",
            "id": "73869630-deb0-48b7-aa71-a61fc968add4",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "d333c9f3-4a76-4ed3-8330-1e64b8326648",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchContact0",
                    "type": "Button",
                    "id": "ea6e57c3-c619-4945-9cd1-c9f072d4b3f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchContact1",
                    "type": "Button",
                    "id": "f11f0bc0-5998-4ef3-bf2e-145910ea1223",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold0",
                    "type": "PassThrough",
                    "id": "4fcbbae7-ae75-41a2-ac79-faaea3c908ae",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hold1",
                    "type": "PassThrough",
                    "id": "45559315-49de-4e66-8888-3fde56e2eaf4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "612c1624-3177-4a38-8230-cda3fc896348",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44e7ae61-afc6-4893-99f6-e7807a11414f",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hold0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb54a0d0-0c1e-4c8b-b24f-1b9094ad1a76",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44e86c36-d089-4947-ae3d-cdabb62fcb60",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29c25d0e-8563-437f-b99b-2d560c6bedc2",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchContact0",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}